// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`secure of IAM Add Config rule of account password policy 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_iam_account_password_policy\\": {
      \\"TestDefault_defaultAccountPasswordPolicy_DC7D980D\\": {
        \\"allow_users_to_change_password\\": true,
        \\"max_password_age\\": 90,
        \\"minimum_password_length\\": 14,
        \\"password_reuse_prevention\\": 24,
        \\"require_lowercase_characters\\": true,
        \\"require_numbers\\": true,
        \\"require_symbols\\": true,
        \\"require_uppercase_characters\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/TestDefault/defaultAccountPasswordPolicy\\",
            \\"uniqueId\\": \\"TestDefault_defaultAccountPasswordPolicy_DC7D980D\\"
          }
        }
      }
    },
    \\"aws_config_config_rule\\": {
      \\"TestDefault_defaultAccountPasswordPolicyConfigRule_135AF16F\\": {
        \\"name\\": \\"IAMAccountMFAEnabled\\",
        \\"source\\": [
          {
            \\"owner\\": \\"AWS\\",
            \\"source_identifier\\": \\"MFA_ENABLED_FOR_IAM_CONSOLE_ACCESS\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/TestDefault/defaultAccountPasswordPolicyConfigRule\\",
            \\"uniqueId\\": \\"TestDefault_defaultAccountPasswordPolicyConfigRule_135AF16F\\"
          }
        }
      }
    }
  }
}"
`;

exports[`secure of IAM default account password policy 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_iam_account_password_policy\\": {
      \\"TestDefault_defaultAccountPasswordPolicy_DC7D980D\\": {
        \\"allow_users_to_change_password\\": true,
        \\"max_password_age\\": 90,
        \\"minimum_password_length\\": 14,
        \\"password_reuse_prevention\\": 24,
        \\"require_lowercase_characters\\": true,
        \\"require_numbers\\": true,
        \\"require_symbols\\": true,
        \\"require_uppercase_characters\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/TestDefault/defaultAccountPasswordPolicy\\",
            \\"uniqueId\\": \\"TestDefault_defaultAccountPasswordPolicy_DC7D980D\\"
          }
        }
      }
    }
  }
}"
`;
